<resources>
    <string name="app_name">thingyClientYellow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_email_default">your email</string>
    <string name="dyrlogo">DyrLogo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register_login">RegisterLoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="promp_password_confirm">Confirm Password</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="account_creation_fail">Can\'t create the account</string>
    <string name="register_fail">Can\'t register your Dyr account</string>
    <string name="passwords_not_same">passwords are not the same</string>
    <string name="internet_error">Not connected to the internet</string>
    <string name="sign_up_fail">Can\'t connect to the server</string>
    <string name="login_fail">Can\'t connect to your Dyr account</string>
    <string name="example">example</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main">main_activity_label</string>
    <string name="add">Add</string>
    <string name="animal_name_example">animal name example</string>
    <string name="animal_type_example">animal type example</string>
    <string name="shared_preference">shared_pref_dyr</string>
    <string name="userId">userId</string>
    <string name="tokenId">tokenId</string>
    <string name="test_email">sylvain.julmy@unifr.ch</string>
    <string name="test_password">PasswordOfSylvain</string>
    <string name="vivarium">Vivarium</string>
    <string name="aquarium">Aquarium</string>
    <string name="terrarium">Terrarium</string>
    <string name="aquaterrarium">Aquaterrarium</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="animal_name">Animal name</string>
    <string name="animal_type">Animal type</string>
    <string name="update">Update</string>
    <string name="view_video">View video</string>
    <string name="add_animal">Add Animal</string>
    <string name="environmentsMenuEntry">My Environments</string>
    <string name="animalsMenuEntry">My Animals</string>
    <string name="environment">Environment</string>
    <string name="animal">Animal</string>
    <string name="animals">Animals</string>
    <string name="env_type">Environment type</string>
    <string name="sensors">Sensors</string>
    <string name="favEnvEntry1">My favorite environment 1</string>
    <string name="settings">Settings</string>
    <string name="disconnection">Disconnection</string>
    <string name="header_title">Dyr Menu</string>
    <string name="default_notification_channel_id">FirebaseNotificationChannel</string>
    <string name="notification_channel_name">DyrNotificationChannel</string>
    <string name="notification_channel_description">DyrNotificationForEnvironment</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="air_quality">Air quality</string>
    <string name="air_pressure">Air pressure</string>
    <string name="light">Light</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="thingy">Thingy</string>
    <string name="ip_camera">Camera</string>
    <string name="userEmailSharedPref">userEmailSharedPref</string>
    <string name="userPasswordSharedPref">userPasswordSharedPref</string>
    <string name="firebaseData">firebaseOnNewTokenData</string>
</resources>
