<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical"
                                                   android:id="@+id/environment_creation_constraint_layout"
                                                   tools:context="ch.snipy.thingyClientYellow.environment.EnvironmentCreationFragment"
        >

    <ImageView
            android:layout_width="230dp"
            android:layout_height="194dp"
            tools:src="@tools:sample/avatars[0]"
            android:id="@+id/environment_creation_image"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_android_black_64dp"
            android:visibility="visible"/>

    <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/environment_creation_image"
            android:id="@+id/environment_creation_radio_group_type"
            android:layout_marginEnd="8dp"
            android:checkedButton="@+id/environment_creation_vivarium_button"
            android:visibility="visible">

        <RadioButton
                android:text="@string/vivarium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/environment_creation_vivarium_button"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"/>

        <RadioButton
                android:text="@string/aquarium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/environment_creation_aquarium_button"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

        <RadioButton
                android:text="@string/terrarium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/environment_creation_terrarium_button"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>