<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical"
                                                   android:id="@+id/animal_creation_constraint_layout"
                                                   tools:context="ch.snipy.thingyClientYellow.animal.AnimalCreationFragment"
        >

    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/animal_creation_image"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_android_red_64dp"
            android:visibility="visible"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/animal_name"
            android:ems="10"
            android:id="@+id/animal_creation_name"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/animal_creation_image"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

    <Spinner
            android:id="@+id/spinner_animal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/animal_creation_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:spinnerMode="dropdown"
            />

    <Button
            android:text="@string/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/animal_creation_create_button"
            app:layout_constraintEnd_toStartOf="@+id/animal_creation_cancel_button"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_animal_type"/>

    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/animal_creation_cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/animal_creation_create_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_animal_type"/>


</androidx.constraintlayout.widget.ConstraintLayout>
