<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical"
                                                   android:id="@+id/animal_constraint_layout"
                                                   tools:context="ch.snipy.thingyClientYellow.animal.AnimalFragment">

    <TextView
            android:text="@string/animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/animal_title" android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

    <ImageButton
            android:src="@android:drawable/ic_menu_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/animal_update_button"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/animal_delete_button" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
            android:src="@android:drawable/ic_menu_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/animal_delete_button"
            android:background="@color/red"
            android:contentDescription="@string/todo"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/animal_image"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/todo"
            android:background="@android:color/white"
            android:src="@mipmap/icon_app"
            android:visibility="visible"/>

    <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/animal_name" android:hint="@string/animal_name" android:textAlignment="center"
            android:layout_marginTop="85dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/animal_image"
            android:layout_marginStart="8dp" android:importantForAutofill="no" android:textSize="18sp"/>

    <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/animal_type" android:hint="@string/animal_type" android:textAlignment="center"
            android:importantForAutofill="no" android:textSize="18sp"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/animal_name" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/animal_image"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.909"/>

</androidx.constraintlayout.widget.ConstraintLayout>


